# multibagger

./: .gitignore  README.md  pyproject.toml
.claude/agents/: stock-analyst.md
.claude/commands/: stock-analysis.md
resources/Stocks/2025-07-31/: Aryaman Capital.xlsx  Aryaman Fin.Serv.xlsx  Axis Solution.xlsx  Bombay Super Hyb.xlsx  Cons. Finvest.xlsx  Danlaw Tech.xlsx  Dynacons Sys.xlsx  Emerald Finance.xlsx  Finkurve Fin.xlsx  Franklin Indust.xlsx  Fredun Pharma.xlsx  Geekay Wires.xlsx  IZMO.xlsx  Integra Engg.xlsx  Jyoti Resins.xlsx  K.P. Energy.xlsx  Kingfa Science.xlsx  Kings Infra.xlsx  Krishana Phosch.xlsx  Lotus Chocolate.xlsx  Master Trust.xlsx  Monarch Networth.xlsx  Morgan Ventures.xlsx  POCL Enterprises.xlsx  RMC Switchgears.xlsx  SG Finserve.xlsx  SG Mart.xlsx  Solex Energy.xlsx  Std. Capital Mkt.xlsx  Taylormade Renew.xlsx  Vintron Info.xlsx  Zodiac Energy.xlsx
resources/reports/2025-07-31/: VINTRON_INFORMATICS_LTD_analysis_172642.json  ZODIAC_ENERGY_LTD_analysis_173008.json  Zodiac_Energy_Investment_Analysis_Report.md
scripts/: analyze_all_stocks.py  batch_stock_analysis.py
src/multibagger/: __init__.py  config.py  data_extractor.py  financial_calculator.py  stock_analyzer.py  utils.py
tests/: __init__.py  test_stock_analyzer.py
